--- a/recipes/assassins-spaghetti.html
+++ b/recipes/assassins-spaghetti.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Spaghetti all'Assassina (Assassin's Spaghetti)</title>
-    </head>
-    <body>
-        <h1>Spaghetti all'Assassina (Assassin's Spaghetti)</h1>
-        <img src="https://www.allrecipes.com/thmb/Nm42X1WNio7YAXQVD_zEwPO8m1A=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8534000-spaghetti-allassassina-assassins-spaghetti-VAT-hero-4x3-b-f3617177055043949f46673b7d44c701.jpg"
+
+<head>
+    <meta charset="UTF-8">
+    <title>Spaghetti all'Assassina (Assassin's Spaghetti)</title>
+</head>
+
+<body>
+    <h1>Spaghetti all'Assassina (Assassin's Spaghetti)</h1>
+    <img src="https://www.allrecipes.com/thmb/Nm42X1WNio7YAXQVD_zEwPO8m1A=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8534000-spaghetti-allassassina-assassins-spaghetti-VAT-hero-4x3-b-f3617177055043949f46673b7d44c701.jpg"
         alt="A finished Spaghetti all'Assassina (Assassin's Spaghetti) served on a white bowl">
-        <h2>Description</h2>
-        <p>Caramelized tomato sauce makes this a wonderfully savory dish. The reduction of the tomato broth brings out the sweetness of the tomatoes which balances well with the spiciness of the chili flakes.</p>
-        <h2>Ingredients</h2>
-        <h3>Tomato Broth:</h3>
-        <ul>
-            <li>1 tablespoon olive oil</li>
-            <li>2 cloves garlic, minced</li>
-            <li>3 cups tomato puree</li>
-            <li>3 cups water</li>
-            <li>1 teaspoon salt, or to taste</li>
-        </ul>
-        <h3>Assassin's Spaghetti:</h3>
-        <ul>
-            <li>¼ cup olive oil</li>
-            <li>2 teaspoons red chili flakes, or to taste</li>
-            <li>6 ounces dry spaghetti</li>
-            <li>salt to taste</li>
-            <li>1 tablespoon finely chopped parsley, for garnish</li>
-        </ul>
-        <h2>Steps</h2>
-        <ol>
-            <li>Gather all ingredients.</li>
-            <li>Heat olive oil in a pot over medium heat. Add garlic and sizzle until it starts to turn golden and fragrant, about 1 minute. Stir in tomato puree, water, and salt. Bring to a simmer on medium-high. Once simmering, reduce to low heat and keep warm.</li>
-            <li>Pour olive oil into a large non-stick skillet over medium-high heat, season with chili flakes and heat until chili flakes start to sizzle, for 1 minute. Add raw spaghetti and toss until well coated with chili oil.</li>
-            <li>Pour in about 3 cups of tomato broth and, using tongs, move pasta from side to side to evenly distribute tomato broth. Cook, occasionally moving pasta from side to side with tongs, all facing the same direction, until most of the broth has been absorbed or evaporated, and the spaghetti starts frying in the pan.</li>
-            <li>Turn spaghetti over with tongs, and evenly arrange in the pan. Keep cooking until the pasta starts to brown, and even lightly chars.</li>
-            <li>Add about 2 more cups of tomato broth, and repeat the process. Continue cooking until the spaghetti is as charred as you like , and cooked to your desired doneness. More broth can be added at the end of the process for a saucier version, as shown in the video, or it can be served relatively dry.</li>
-            <li>Serve with a drizzle of olive oil and more chili flakes if desired.</li>
-            <li>Enjoy!</li>
-        </ol>
-    </body>
+    <h2>Description</h2>
+    <p>Caramelized tomato sauce makes this a wonderfully savory dish. The reduction of the tomato broth brings out the
+        sweetness of the tomatoes which balances well with the spiciness of the chili flakes.</p>
+    <h2>Ingredients</h2>
+    <h3>Tomato Broth:</h3>
+    <ul>
+        <li>1 tablespoon olive oil</li>
+        <li>2 cloves garlic, minced</li>
+        <li>3 cups tomato puree</li>
+        <li>3 cups water</li>
+        <li>1 teaspoon salt, or to taste</li>
+    </ul>
+    <h3>Assassin's Spaghetti:</h3>
+    <ul>
+        <li>¼ cup olive oil</li>
+        <li>2 teaspoons red chili flakes, or to taste</li>
+        <li>6 ounces dry spaghetti</li>
+        <li>salt to taste</li>
+        <li>1 tablespoon finely chopped parsley, for garnish</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Heat olive oil in a pot over medium heat. Add garlic and sizzle until it starts to turn golden and fragrant,
+            about 1 minute. Stir in tomato puree, water, and salt. Bring to a simmer on medium-high. Once simmering,
+            reduce to low heat and keep warm.</li>
+        <li>Pour olive oil into a large non-stick skillet over medium-high heat, season with chili flakes and heat until
+            chili flakes start to sizzle, for 1 minute. Add raw spaghetti and toss until well coated with chili oil.
+        </li>
+        <li>Pour in about 3 cups of tomato broth and, using tongs, move pasta from side to side to evenly distribute
+            tomato broth. Cook, occasionally moving pasta from side to side with tongs, all facing the same direction,
+            until most of the broth has been absorbed or evaporated, and the spaghetti starts frying in the pan.</li>
+        <li>Turn spaghetti over with tongs, and evenly arrange in the pan. Keep cooking until the pasta starts to brown,
+            and even lightly chars.</li>
+        <li>Add about 2 more cups of tomato broth, and repeat the process. Continue cooking until the spaghetti is as
+            charred as you like , and cooked to your desired doneness. More broth can be added at the end of the process
+            for a saucier version, as shown in the video, or it can be served relatively dry.</li>
+        <li>Serve with a drizzle of olive oil and more chili flakes if desired.</li>
+        <li>Enjoy!</li>
+    </ol>
+</body>
+
 </html>
