Add link for other recipes and format them as ul

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/assassins-spaghetti.html">Spaghetti all'Assassina (Assassin's Spaghetti)</a>
+    <ul>
+        <li><a href="recipes/assassins-spaghetti.html">Spaghetti all'Assassina (Assassin's Spaghetti)</a></li>
+        <li><a href="recipes/easy-fried-rice.html">Easy Fried Rice</a></li>
+        <li><a href="recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
+    </ul>
 </body>
 
 </html>
