Add basic style to all pages

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="bold">
         <li><a href="recipes/assassins-spaghetti.html">Spaghetti all'Assassina (Assassin's Spaghetti)</a></li>
         <li><a href="recipes/easy-fried-rice.html">Easy Fried Rice</a></li>
         <li><a href="recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
