--- a/recipes/indian-chicken-curry.html
+++ b/recipes/indian-chicken-curry.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Indian Chicken Curry</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -11,12 +12,12 @@
     <img src="https://www.allrecipes.com/thmb/4xmE8lu1TSg893xk93wk20AKJcs=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/46822-indian-chicken-curry-ii-DDMFS-4x3-39160aaa95674ee395b9d4609e3b0988.jpg"
         alt="A Bowl of rice and indian chicken curry." width="600" height="450">
     <h2>Description</h2>
-    <p>This Indian-inspired creamy chicken curry recipe is similar to a curry I had in India. The aromatic spices and
+    <p class="italic">This Indian-inspired creamy chicken curry recipe is similar to a curry I had in India. The aromatic spices and
         flavors are a delight to the senses! Delicious with fresh naan and basmati rice.</p>
-    <p>You don't need to leave the house to enjoy satisfying Indian chicken curry. With this recipe, you can have a
+    <p class="italic">You don't need to leave the house to enjoy satisfying Indian chicken curry. With this recipe, you can have a
         restaurant-worthy meal on the table in under an hour.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="bold">
         <li>3 tablespoons olive oil</li>
         <li>1 small onion, chopped</li>
         <li>2 cloves garlic, minced</li>
