--- a/recipes/assassins-spaghetti.html
+++ b/recipes/assassins-spaghetti.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Spaghetti all'Assassina (Assassin's Spaghetti)</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -11,11 +12,11 @@
     <img src="https://www.allrecipes.com/thmb/Nm42X1WNio7YAXQVD_zEwPO8m1A=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8534000-spaghetti-allassassina-assassins-spaghetti-VAT-hero-4x3-b-f3617177055043949f46673b7d44c701.jpg"
         alt="A cooked Spaghetti all'Assassina (Assassin's Spaghetti) served on a white bowl" width="600" height="450">
     <h2>Description</h2>
-    <p>Caramelized tomato sauce makes this a wonderfully savory dish. The reduction of the tomato broth brings out the
+    <p class="italic">Caramelized tomato sauce makes this a wonderfully savory dish. The reduction of the tomato broth brings out the
         sweetness of the tomatoes which balances well with the spiciness of the chili flakes.</p>
     <h2>Ingredients</h2>
     <h3>Tomato Broth:</h3>
-    <ul>
+    <ul class="bold">
         <li>1 tablespoon olive oil</li>
         <li>2 cloves garlic, minced</li>
         <li>3 cups tomato puree</li>
@@ -23,7 +24,7 @@
         <li>1 teaspoon salt, or to taste</li>
     </ul>
     <h3>Assassin's Spaghetti:</h3>
-    <ul>
+    <ul class="bold">
         <li>¼ cup olive oil</li>
         <li>2 teaspoons red chili flakes, or to taste</li>
         <li>6 ounces dry spaghetti</li>
