Modify spacing and color of the pages
All pages linked to styles.css have a default spacing and box-sizing
from the global selector.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul class="bold">
-        <li><a href="recipes/assassins-spaghetti.html">Spaghetti all'Assassina (Assassin's Spaghetti)</a></li>
-        <li><a href="recipes/easy-fried-rice.html">Easy Fried Rice</a></li>
-        <li><a href="recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
-    </ul>
+    <div class="container">
+        <h1 class="title">ODIN RECIPES</h1>
+    </div>
+    <div class="container bold">
+        <ul>
+            <li class="list-spacing"><a href="recipes/assassins-spaghetti.html">Spaghetti all'Assassina (Assassin's Spaghetti)</a></li>
+            <li class="list-spacing"><a href="recipes/easy-fried-rice.html">Easy Fried Rice</a></li>
+            <li class="list-spacing"><a href="recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
