Add consistent title styling for each pages

--- a/recipes/easy-fried-rice.html
+++ b/recipes/easy-fried-rice.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
-    <h1>Easy Fried Rice</h1>
+    <div class=container>
+        <h1 class="title">Easy Fried Rice</h1>
+    </div>
     <img src="https://www.allrecipes.com/thmb/V0JDG4NQ8nX9lTknDGTCnWqTA3U=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/79543-fried-rice-restaurant-style-DDMFS-4x3-b79a6ea27e0344399257ca1df67ca1cd.jpg"
         alt="A cooked Fried Rice served on a bowl" width="600" height="450">
     <h2>Description</h2>
-    <p class="italic">A quick fried rice recipe like you get at your favorite Chinese restaurant. Leftover rice, plus a couple of eggs,
+    <p class="italic">A quick fried rice recipe like you get at your favorite Chinese restaurant. Leftover rice, plus a
+        couple of eggs,
         baby carrots, peas, and soy sauce is all you need. Garnish with sliced green onions, if desired.</p>
     <h2>Ingredients</h2>
     <ul class="bold">
