--- a/recipes/indian-chicken-curry.html
+++ b/recipes/indian-chicken-curry.html
@@ -8,13 +8,17 @@
 </head>
 
 <body>
-    <h1>Indian Chicken Curry</h1>
+    <div class=container>
+        <h1 class="title">Indian Chicken Curry</h1>
+    </div>
     <img src="https://www.allrecipes.com/thmb/4xmE8lu1TSg893xk93wk20AKJcs=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/46822-indian-chicken-curry-ii-DDMFS-4x3-39160aaa95674ee395b9d4609e3b0988.jpg"
         alt="A Bowl of rice and indian chicken curry." width="600" height="450">
     <h2>Description</h2>
-    <p class="italic">This Indian-inspired creamy chicken curry recipe is similar to a curry I had in India. The aromatic spices and
+    <p class="italic">This Indian-inspired creamy chicken curry recipe is similar to a curry I had in India. The
+        aromatic spices and
         flavors are a delight to the senses! Delicious with fresh naan and basmati rice.</p>
-    <p class="italic">You don't need to leave the house to enjoy satisfying Indian chicken curry. With this recipe, you can have a
+    <p class="italic">You don't need to leave the house to enjoy satisfying Indian chicken curry. With this recipe, you
+        can have a
         restaurant-worthy meal on the table in under an hour.</p>
     <h2>Ingredients</h2>
     <ul class="bold">
