--- a/recipes/assassins-spaghetti.html
+++ b/recipes/assassins-spaghetti.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
-    <h1>Spaghetti all'Assassina (Assassin's Spaghetti)</h1>
+    <div class=container>
+        <h1 class="title">Spaghetti all'Assassina (Assassin's Spaghetti)</h1>
+    </div>
     <img src="https://www.allrecipes.com/thmb/Nm42X1WNio7YAXQVD_zEwPO8m1A=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8534000-spaghetti-allassassina-assassins-spaghetti-VAT-hero-4x3-b-f3617177055043949f46673b7d44c701.jpg"
         alt="A cooked Spaghetti all'Assassina (Assassin's Spaghetti) served on a white bowl" width="600" height="450">
     <h2>Description</h2>
-    <p class="italic">Caramelized tomato sauce makes this a wonderfully savory dish. The reduction of the tomato broth brings out the
+    <p class="italic">Caramelized tomato sauce makes this a wonderfully savory dish. The reduction of the tomato broth
+        brings out the
         sweetness of the tomatoes which balances well with the spiciness of the chili flakes.</p>
     <h2>Ingredients</h2>
     <h3>Tomato Broth:</h3>
